; ModuleID = '/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_aes.c_update.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_aes.c_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@BLOCK_SIZE = common dso_local global i32 0, align 4
@st = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*, i32)* @update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update(%struct.TYPE_4__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %16 = load i32, i32* @BLOCK_SIZE, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @BLOCK_SIZE, align 4
  %19 = srem i32 %17, %18
  %20 = sub nsw i32 %16, %19
  %21 = load i32, i32* @BLOCK_SIZE, align 4
  %22 = srem i32 %20, %21
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = add nsw i32 %23, %24
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* @BLOCK_SIZE, align 4
  %28 = sdiv i32 %26, %27
  store i32 %28, i32* %10, align 4
  %29 = load i32, i32* %9, align 4
  %30 = call i32* @calloc(i32 1, i32 %29)
  store i32* %30, i32** %12, align 8
  %31 = load i32*, i32** %12, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %34, label %33

33:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %121

34:                                               ; preds = %3
  %35 = load i32, i32* %9, align 4
  %36 = call i32* @calloc(i32 1, i32 %35)
  store i32* %36, i32** %13, align 8
  %37 = load i32*, i32** %13, align 8
  %38 = icmp ne i32* %37, null
  br i1 %38, label %42, label %39

39:                                               ; preds = %34
  %40 = load i32*, i32** %12, align 8
  %41 = call i32 @free(i32* %40)
  store i32 0, i32* %4, align 4
  br label %121

42:                                               ; preds = %34
  %43 = load i32*, i32** %13, align 8
  %44 = load i32, i32* %9, align 4
  %45 = call i32 @memset(i32* %43, i32 0, i32 %44)
  %46 = load i32*, i32** %13, align 8
  %47 = load i32*, i32** %6, align 8
  %48 = load i32, i32* %7, align 4
  %49 = call i32 @memcpy(i32* %46, i32* %47, i32 %48)
  %50 = load i32, i32* %8, align 4
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %57

52:                                               ; preds = %42
  %53 = load i32*, i32** %13, align 8
  %54 = load i32, i32* %7, align 4
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds i32, i32* %53, i64 %55
  store i32 8, i32* %56, align 4
  br label %57

57:                                               ; preds = %52, %42
  %58 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %59 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %58, i32 0, i32 0
  %60 = load i64, i64* %59, align 8
  %61 = icmp eq i64 %60, 0
  br i1 %61, label %62, label %84

62:                                               ; preds = %57
  store i32 0, i32* %11, align 4
  br label %63

63:                                               ; preds = %80, %62
  %64 = load i32, i32* %11, align 4
  %65 = load i32, i32* %10, align 4
  %66 = icmp slt i32 %64, %65
  br i1 %66, label %67, label %83

67:                                               ; preds = %63
  %68 = load i32, i32* @BLOCK_SIZE, align 4
  %69 = load i32, i32* %11, align 4
  %70 = mul nsw i32 %68, %69
  store i32 %70, i32* %14, align 4
  %71 = load i32*, i32** %13, align 8
  %72 = load i32, i32* %14, align 4
  %73 = sext i32 %72 to i64
  %74 = getelementptr inbounds i32, i32* %71, i64 %73
  %75 = load i32*, i32** %12, align 8
  %76 = load i32, i32* %14, align 4
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds i32, i32* %75, i64 %77
  %79 = call i32 @aes_encrypt(i32* @st, i32* %74, i32* %78)
  br label %80

80:                                               ; preds = %67
  %81 = load i32, i32* %11, align 4
  %82 = add nsw i32 %81, 1
  store i32 %82, i32* %11, align 4
  br label %63

83:                                               ; preds = %63
  br label %112

84:                                               ; preds = %57
  %85 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %86 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %85, i32 0, i32 0
  %87 = load i64, i64* %86, align 8
  %88 = icmp sgt i64 %87, 0
  br i1 %88, label %89, label %111

89:                                               ; preds = %84
  store i32 0, i32* %11, align 4
  br label %90

90:                                               ; preds = %107, %89
  %91 = load i32, i32* %11, align 4
  %92 = load i32, i32* %10, align 4
  %93 = icmp slt i32 %91, %92
  br i1 %93, label %94, label %110

94:                                               ; preds = %90
  %95 = load i32, i32* @BLOCK_SIZE, align 4
  %96 = load i32, i32* %11, align 4
  %97 = mul nsw i32 %95, %96
  store i32 %97, i32* %15, align 4
  %98 = load i32*, i32** %13, align 8
  %99 = load i32, i32* %15, align 4
  %100 = sext i32 %99 to i64
  %101 = getelementptr inbounds i32, i32* %98, i64 %100
  %102 = load i32*, i32** %12, align 8
  %103 = load i32, i32* %15, align 4
  %104 = sext i32 %103 to i64
  %105 = getelementptr inbounds i32, i32* %102, i64 %104
  %106 = call i32 @aes_decrypt(i32* @st, i32* %101, i32* %105)
  br label %107

107:                                              ; preds = %94
  %108 = load i32, i32* %11, align 4
  %109 = add nsw i32 %108, 1
  store i32 %109, i32* %11, align 4
  br label %90

110:                                              ; preds = %90
  br label %111

111:                                              ; preds = %110, %84
  br label %112

112:                                              ; preds = %111, %83
  %113 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %114 = load i32*, i32** %12, align 8
  %115 = load i32, i32* %9, align 4
  %116 = call i32 @r_crypto_append(%struct.TYPE_4__* %113, i32* %114, i32 %115)
  %117 = load i32*, i32** %12, align 8
  %118 = call i32 @free(i32* %117)
  %119 = load i32*, i32** %13, align 8
  %120 = call i32 @free(i32* %119)
  store i32 1, i32* %4, align 4
  br label %121

121:                                              ; preds = %112, %39, %33
  %122 = load i32, i32* %4, align 4
  ret i32 %122
}

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @aes_encrypt(i32*, i32*, i32*) #1

declare dso_local i32 @aes_decrypt(i32*, i32*, i32*) #1

declare dso_local i32 @r_crypto_append(%struct.TYPE_4__*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
